--- a/index.html
+++ b/index.html
@@ -10,20 +10,47 @@
     <!-- WHEN I load their portfolio
     THEN I am presented with the developer's name, a recent photo or avatar, 
     and links to sections about them, their work, and how to contact them -->
+    <img src="" alt="" />
 
     <!-- WHEN I click one of the links in the navigation
     THEN the UI scrolls to the corresponding section -->
+    <nav>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </nav>
 
     <!-- WHEN I click on the link to the section about their work
     THEN the UI scrolls to a section with titled images of the developer's applications -->
+    <section>
+      <!-- include link to work and scrolls to titled image of app (from nav)-->
+    </section>
+
+    <section>
+      <!-- include link to work and scrolls to titled image of app (from nav)-->
+    </section>
+
+    <section>
+      <!-- include link to work and scrolls to titled image of app (from nav)-->
+    </section>
+
+    <section>
+      <!-- include link to work and scrolls to titled image of app (from nav)-->
+    </section>
 
     <!-- WHEN I am presented with the developer's first application
     THEN that application's image should be larger in size than the others-->
+    <!-- a hover over image so that it's larger than the other app images-->
 
     <!--  WHEN I click on the images of the applications
     THEN I am taken to that deployed application -->
+    <!-- link href =""    include a link to the github pages site-->
 
     <!--  WHEN I resize the page or view the site on various screens and devices
     THEN I am presented with a responsive layout that adapts to my viewport -->
+    <!-- include media query-->
   </body>
 </html>
