Updated html and css files
Updated images to jpg files. Fixed and updated header and nav bar css

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     </title>
   </head>
   <body>
-    <!-- this is a navigation bar -->
-    <!-- WHEN I click one of the links in the navigation
-    THEN the UI scrolls to the corresponding section -->
+    <!-- this is a header/navigation bar -->
     <header>
-      <h1>
-        <a href="index.html">Nathaniel Chan</a>
-      </h1>
+      <div>
+        <h1>
+          <a href="index.html">Nathaniel Chan</a>
+        </h1>
+      </div>
       <nav>
         <ul>
           <li>
@@ -36,25 +36,27 @@
       </nav>
     </header>
 
-    <!-- Hero/jumbotron -->
+    <!-- background image section -->
     <section>
-      <img
-        src="assets\images\background-image"
-        alt="colorful background picture"
-      />
-      <h2>Insert Subtitle here</h2>
+      <div class="background"></div>
+      <div>
+        <h2>Story of Me in One Page</h2>
+      </div>
     </section>
 
     <!-- about me section -->
-    <section id="about-me">
+    <article id="about-me">
       <h2>About Me</h2>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
         praesentium aut amet veritatis tempore modi soluta repudiandae quia
         eligendi sint dicta alias ipsa iure ex, sequi tempora voluptatibus.
-        Ducimus, temporibus.
+        Ducimus, temporibus. Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Sunt in laudantium corporis sit? Illum earum iste cum reiciendis
+        debitis assumenda, commodi fuga distinctio perspiciatis hic recusandae
+        ducimus voluptatibus aperiam delectus!
       </p>
-    </section>
+    </article>
 
     <section id="work">
       <div><h2>Work</h2></div>
@@ -66,15 +68,15 @@
         <p></p>
       </div>
       <div>
-        <img src="assets\images\image1" alt="" />
+        <img src="assets\images\image1.jpg" alt="" />
         <p>asdfa</p>
-        <img src="assets\images\image2" alt="" />
+        <img src="assets\images\image2.jpg" alt="" />
         <p>asdfasdf</p>
       </div>
       <div>
-        <img src="assets\images\image3" alt="" />
+        <img src="assets\images\image3.jpg" alt="" />
         <p>asdfasdf</p>
-        <img src="assets\images\image4" alt="" />
+        <img src="assets\images\image4.jpg" alt="" />
         <p>asdfasdf</p>
       </div>
     </section>
