--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 
     <!-- background image section -->
     <section>
-      <div class="background"></div>
-      <div>
+      <div class="background">
         <h2>Story of Me in One Page</h2>
       </div>
     </section>
@@ -59,7 +58,7 @@
     </article>
 
     <section id="work">
-      <div><h2>Work</h2></div>
+      <h2>Work</h2>
       <div>
         <img
           src="assets\images\run-buddy.jpg"
