--- a/index.html
+++ b/index.html
@@ -84,17 +84,23 @@
     <section id="contact-me">
       <h2>Contact Me</h2>
       <ul>
-        <li>555.555.5555</li>
         <li>
-          <a href="">include twitter</a>
+          <a href="tel:555.555.5555">555.555.5555</a>
         </li>
         <li>
-          <a href="mailto:nhchan22@gmail.com">Email Me!</a>
+          <a href="https://twitter.com/bubblesfishy22">Twitter</a>
         </li>
         <li>
-          <a href="">github</a>
+          <a href="mailto:nhchan22@gmail.com">nhchan22@gmail.com</a>
         </li>
-        <li><a href="">LinkedIn</a></li>
+        <li>
+          <a href="https://github.com/nchan22">GitHub</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/nathaniel-chan-22003b191/"
+            >LinkedIn</a
+          >
+        </li>
       </ul>
     </section>
 
