Updated html and css
Added css to the "about me" section and updated the html paragraph in the "about me" section

--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
         praesentium aut amet veritatis tempore modi soluta repudiandae quia
         eligendi sint dicta alias ipsa iure ex, sequi tempora voluptatibus.
-        Ducimus, temporibus. Lorem ipsum dolor sit amet consectetur adipisicing
-        elit. Sunt in laudantium corporis sit? Illum earum iste cum reiciendis
-        debitis assumenda, commodi fuga distinctio perspiciatis hic recusandae
-        ducimus voluptatibus aperiam delectus!
+        Ducimus, temporibus.
+        <br />
+        <br />
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt in
+        laudantium corporis sit? Illum earum iste cum reiciendis debitis
+        assumenda, commodi fuga distinctio perspiciatis hic recusandae ducimus
+        voluptatibus aperiam delectus!
       </p>
     </article>
 
