updated html and css

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     <!-- background image section -->
     <section>
       <div class="background">
-        <h2>Story of Me in One Page</h2>
+        <h2 class="primary-section-header">Story of Me in One Page</h2>
       </div>
     </section>
 
     <!-- about me section -->
     <article id="about-me">
-      <h2>About Me</h2>
+      <h2 class="primary-section-header">About Me</h2>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
         praesentium aut amet veritatis tempore modi soluta repudiandae quia
@@ -60,32 +60,35 @@
       </p>
     </article>
 
+    <!-- work section -->
     <section id="work">
-      <h2>Work</h2>
       <div>
-        <img
-          src="assets\images\run-buddy.jpg"
-          alt="screenshot of Run Buddy website"
-        />
-        <p></p>
-      </div>
-      <div>
-        <img src="assets\images\image1.jpg" alt="" />
-        <p>asdfa</p>
-        <img src="assets\images\image2.jpg" alt="" />
-        <p>asdfasdf</p>
-      </div>
-      <div>
-        <img src="assets\images\image3.jpg" alt="" />
-        <p>asdfasdf</p>
-        <img src="assets\images\image4.jpg" alt="" />
-        <p>asdfasdf</p>
+        <h2 class="primary-section-header">Work</h2>
+        <div>
+          <img
+            src="assets\images\run-buddy.jpg"
+            alt="screenshot of Run Buddy website"
+          />
+          <p></p>
+        </div>
+        <div>
+          <img src="assets\images\image1.jpg" alt="" />
+          <p>asdfa</p>
+          <img src="assets\images\image2.jpg" alt="" />
+          <p>asdfasdf</p>
+        </div>
+        <div>
+          <img src="assets\images\image3.jpg" alt="" />
+          <p>asdfasdf</p>
+          <img src="assets\images\image4.jpg" alt="" />
+          <p>asdfasdf</p>
+        </div>
       </div>
     </section>
 
     <!-- contact me section-->
     <section id="contact-me">
-      <h2>Contact Me</h2>
+      <h2 class="primary-section-header">Contact Me</h2>
       <ul>
         <li>
           <a href="tel:555.555.5555">555.555.5555</a>
@@ -109,7 +112,7 @@
 
     <!-- resume section -->
     <section id="resume">
-      <h2>Resume</h2>
+      <h2 class="primary-section-header">Resume</h2>
 
       <a
         href="assets\extra\Nathaniel Chan's Resume Jan 2022.pdf"
