Updated html and css
Added css to the contact me section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- background image section -->
     <section>
       <div class="background">
-        <h2 class="primary-section-header">Story of Me in One Page</h2>
+        <h2>Story of Me in One Page</h2>
       </div>
     </section>
 
@@ -63,21 +63,23 @@
     <!-- work section -->
     <section id="work">
       <div>
-        <h2 class="primary-section-header">Work</h2>
         <div>
+          <h2 class="primary-section-header">Work</h2>
+        </div>
+        <div class="run-buddy">
           <img
             src="assets\images\run-buddy.jpg"
             alt="screenshot of Run Buddy website"
           />
-          <p></p>
+          <p>run buddy</p>
         </div>
-        <div>
+        <div class="extra-image">
           <img src="assets\images\image1.jpg" alt="" />
           <p>asdfa</p>
           <img src="assets\images\image2.jpg" alt="" />
           <p>asdfasdf</p>
         </div>
-        <div>
+        <div class="extra-image">
           <img src="assets\images\image3.jpg" alt="" />
           <p>asdfasdf</p>
           <img src="assets\images\image4.jpg" alt="" />
@@ -89,41 +91,44 @@
     <!-- contact me section-->
     <section id="contact-me">
       <h2 class="primary-section-header">Contact Me</h2>
-      <ul>
-        <li>
-          <a href="tel:555.555.5555">555.555.5555</a>
-        </li>
-        <li>
-          <a href="https://twitter.com/bubblesfishy22">Twitter</a>
-        </li>
-        <li>
-          <a href="mailto:nhchan22@gmail.com">nhchan22@gmail.com</a>
-        </li>
-        <li>
-          <a href="https://github.com/nchan22">GitHub</a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/nathaniel-chan-22003b191/"
-            >LinkedIn</a
-          >
-        </li>
-      </ul>
+      <nav>
+        <ul>
+          <li>
+            <a href="tel:555.555.5555">555.555.5555</a>
+          </li>
+          <li>
+            <a href="https://twitter.com/bubblesfishy22">Twitter</a>
+          </li>
+          <li>
+            <a href="mailto:nhchan22@gmail.com">nhchan22@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://github.com/nchan22">GitHub</a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/nathaniel-chan-22003b191/"
+              >LinkedIn</a
+            >
+          </li>
+        </ul>
+      </nav>
     </section>
 
     <!-- resume section -->
     <section id="resume">
       <h2 class="primary-section-header">Resume</h2>
-
-      <a
-        href="assets\extra\Nathaniel Chan's Resume Jan 2022.pdf"
-        target="_blank"
-        ><img
-          src="assets\images\resume.jpg"
-          alt="screenshot of page 1 of Nathaniel Chan's Resume" />
-        <img
-          src="assets\images\resume2.jpg"
-          alt="screenshot of page 2 of Nathaniel Chan's Resume"
-      /></a>
+      <div>
+        <a
+          href="assets\extra\Nathaniel Chan's Resume Jan 2022.pdf"
+          target="_blank"
+          ><img
+            src="assets\images\resume.jpg"
+            alt="screenshot of page 1 of Nathaniel Chan's Resume" />
+          <img
+            src="assets\images\resume2.jpg"
+            alt="screenshot of page 2 of Nathaniel Chan's Resume"
+        /></a>
+      </div>
     </section>
   </body>
 </html>
