Updated html and css
Adjusted location of Resume and Contact Me section as well as adding links to the work section

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <a href="#work">Work</a>
           </li>
           <li>
-            <a href="#contact-me">Contact Me</a>
+            <a href="#resume">Resume</a>
           </li>
           <li>
-            <a href="#resume">Resume</a>
+            <a href="#contact-me">Contact Me</a>
           </li>
         </ul>
       </nav>
@@ -67,24 +67,49 @@
           <h2 class="primary-section-header">Work</h2>
         </div>
         <div class="run-buddy">
-          <img
-            src="assets\images\run-buddy.jpg"
-            alt="screenshot of Run Buddy website"
-          />
-          <p>run buddy</p>
+          <a href="https://nchan22.github.io/run-buddy/" target="_blank"
+            ><img
+              src="assets\images\run-buddy.jpg"
+              alt="screenshot of Run Buddy website"
+            />
+            <p>Run Buddy</p></a
+          >
         </div>
         <div class="extra-image">
-          <img src="assets\images\image1.jpg" alt="" />
-          <p>asdfa</p>
-          <img src="assets\images\image2.jpg" alt="" />
-          <p>asdfasdf</p>
+          <a
+            href="https://nchan22.github.io/accessibility-code-challenge/"
+            target="_blank"
+            ><img src="assets\images\image1.jpg" alt="" />
+            <p>Horiseon Accessibility Code Challenge</p></a
+          >
+          <a href="" target="_blank">
+            <img src="assets\images\image2.jpg" alt="" />
+            <p>Placeholder 1</p></a
+          >
         </div>
-        <div class="extra-image">
+        <a href="" target="_blank"><div class="extra-image">
           <img src="assets\images\image3.jpg" alt="" />
-          <p>asdfasdf</p>
-          <img src="assets\images\image4.jpg" alt="" />
-          <p>asdfasdf</p>
+          <p>Placeholder 2</p></a>
+         <a href="" target="_blank"> <img src="assets\images\image4.jpg" alt="" />
+          <p>Placeholder 3</p></a>
         </div>
+      </div>
+    </section>
+
+    <!-- resume section -->
+    <section id="resume">
+      <h2 class="primary-section-header">Resume</h2>
+      <div>
+        <a
+          href="assets\extra\Nathaniel Chan's Resume Jan 2022.pdf"
+          target="_blank"
+          ><img
+            src="assets\images\resume.jpg"
+            alt="screenshot of page 1 of Nathaniel Chan's Resume" />
+          <img
+            src="assets\images\resume2.jpg"
+            alt="screenshot of page 2 of Nathaniel Chan's Resume"
+        /></a>
       </div>
     </section>
 
@@ -114,21 +139,9 @@
       </nav>
     </section>
 
-    <!-- resume section -->
-    <section id="resume">
-      <h2 class="primary-section-header">Resume</h2>
-      <div>
-        <a
-          href="assets\extra\Nathaniel Chan's Resume Jan 2022.pdf"
-          target="_blank"
-          ><img
-            src="assets\images\resume.jpg"
-            alt="screenshot of page 1 of Nathaniel Chan's Resume" />
-          <img
-            src="assets\images\resume2.jpg"
-            alt="screenshot of page 2 of Nathaniel Chan's Resume"
-        /></a>
-      </div>
-    </section>
+    <!-- footer section -->
+    <footer>
+      <h3>made by Nathaniel Chan Updated March 2022</h3>
+    </footer>
   </body>
 </html>
