Updated HTML and CSS
Added picture for Horiseon and updated CSS and HTML for the Work Section

--- a/index.html
+++ b/index.html
@@ -75,23 +75,30 @@
             <p>Run Buddy</p></a
           >
         </div>
+
         <div class="extra-image">
           <a
             href="https://nchan22.github.io/accessibility-code-challenge/"
             target="_blank"
-            ><img src="assets\images\image1.jpg" alt="" />
+            ><img src="assets\images\horiseon.jpg" alt="" />
             <p>Horiseon Accessibility Code Challenge</p></a
           >
+          <p></p>
           <a href="" target="_blank">
             <img src="assets\images\image2.jpg" alt="" />
             <p>Placeholder 1</p></a
           >
         </div>
-        <a href="" target="_blank"><div class="extra-image">
-          <img src="assets\images\image3.jpg" alt="" />
-          <p>Placeholder 2</p></a>
-         <a href="" target="_blank"> <img src="assets\images\image4.jpg" alt="" />
-          <p>Placeholder 3</p></a>
+
+        <div class="extra-image">
+          <a href="" target="_blank">
+            <img src="assets\images\image3.jpg" alt="" />
+            <p>Placeholder 2</p></a
+          >
+          <a href="" target="_blank">
+            <img src="assets\images\image4.jpg" alt="" />
+            <p>Placeholder 3</p></a
+          >
         </div>
       </div>
     </section>
