Updated html and css
Updated the work section html and css

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </p>
     </article>
 
-    <!-- work section -->
+    <!-- work section --> 
     <section id="work">
       <div>
         <div>
@@ -72,8 +72,9 @@
               src="assets\images\run-buddy.jpg"
               alt="screenshot of Run Buddy website"
             />
-            <p>Run Buddy</p></a
-          >
+            <div>
+            <p>Run Buddy</p></a>
+          </div>
         </div>
 
         <div class="extra-image">
