Updated css and html
Updated css and html in order for the webpage to be functional with complete styles.

--- a/index.html
+++ b/index.html
@@ -63,42 +63,41 @@
     <!-- work section --> 
     <section id="work">
       <div>
-        <div>
-          <h2 class="primary-section-header">Work</h2>
-        </div>
-        <div class="run-buddy">
+           <h2 class="primary-section-header">Work</h2>
+                <div class="run-buddy">
           <a href="https://nchan22.github.io/run-buddy/" target="_blank"
             ><img
               src="assets\images\run-buddy.jpg"
               alt="screenshot of Run Buddy website"
-            />
-            <div>
-            <p>Run Buddy</p></a>
-          </div>
+            /><p class="position">Run Buddy</p></a>
+          
         
         <div class="extra-image">
+         <div>
           <a
             href="https://nchan22.github.io/accessibility-code-challenge/"
             target="_blank"
-            ><img src="assets\images\horiseon.jpg" alt="" />
-            <p>Horiseon Accessibility Code Challenge</p></a
-          >
-          <p></p>
+            ><img src="assets\images\horiseon.jpg" alt="Screenshot of Horiseon website" />
+            <p>Horiseon Accessibility Code Refractor</p></a>
+           </div>
+          <div>
           <a href="" target="_blank">
             <img src="assets\images\image2.jpg" alt="" />
             <p>Placeholder 1</p></a
           >
         </div>
-
+</div> 
         <div class="extra-image">
-          <a href="" target="_blank">
+          <div>
+            <a href="" target="_blank">
             <img src="assets\images\image3.jpg" alt="" />
-            <p>Placeholder 2</p></a
-          >
+            <p>Placeholder 2</p></a>
+            </div>
+            <div>
           <a href="" target="_blank">
             <img src="assets\images\image4.jpg" alt="" />
-            <p>Placeholder 3</p></a
-          >
+            <p>Placeholder 3</p></a>
+          </div>
         </div>
       </div>
     </section>
@@ -148,7 +147,7 @@
 
     <!-- footer section -->
     <footer>
-      <h3>made by Nathaniel Chan Updated March 2022</h3>
+      <h3>Made by Nathaniel Chan Updated March 2022</h3>
     </footer>
   </body>
 </html>
