Updated HTML and CSS
Fixed bug errors with sizing when screen was becoming smaller and adding Media Query to CSS for a smaller mobile page

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </section>
 
     <!-- about me section -->
-    <article id="about-me">
+    <article id="about-me" class="primary-section">
       <h2 class="primary-section-header">About Me</h2>
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia
@@ -60,50 +60,56 @@
       </p>
     </article>
 
-    <!-- work section --> 
-    <section id="work">
-      <div>
-           <h2 class="primary-section-header">Work</h2>
-                <div class="run-buddy">
-          <a href="https://nchan22.github.io/run-buddy/" target="_blank"
-            ><img
-              src="assets\images\run-buddy.jpg"
-              alt="screenshot of Run Buddy website"
-            /><p class="position">Run Buddy</p></a>
-          
-        
+    <!-- work section -->
+    <section id="work" class="primary-section">
+      <h2 class="primary-section-header">Work</h2>
+      <div class="run-buddy">
+        <a href="https://nchan22.github.io/run-buddy/" target="_blank"
+          ><img
+            src="assets\images\run-buddy.jpg"
+            alt="screenshot of Run Buddy website"
+          />
+          <p class="position">Run Buddy</p></a
+        >
+
         <div class="extra-image">
-         <div>
-          <a
-            href="https://nchan22.github.io/accessibility-code-challenge/"
-            target="_blank"
-            ><img src="assets\images\horiseon.jpg" alt="Screenshot of Horiseon website" />
-            <p>Horiseon Accessibility Code Refractor</p></a>
-           </div>
           <div>
-          <a href="" target="_blank">
-            <img src="assets\images\image2.jpg" alt="" />
-            <p>Placeholder 1</p></a
-          >
+            <a
+              href="https://nchan22.github.io/accessibility-code-challenge/"
+              target="_blank"
+              ><img
+                src="assets\images\horiseon.jpg"
+                alt="Screenshot of Horiseon website"
+              />
+              <p>Horiseon Accessibility Code Refractor</p></a
+            >
+          </div>
+          <div>
+            <a href="" target="_blank">
+              <img src="assets\images\image2.jpg" alt="" />
+              <p>Placeholder 1</p></a
+            >
+          </div>
         </div>
-</div> 
         <div class="extra-image">
           <div>
             <a href="" target="_blank">
-            <img src="assets\images\image3.jpg" alt="" />
-            <p>Placeholder 2</p></a>
-            </div>
-            <div>
-          <a href="" target="_blank">
-            <img src="assets\images\image4.jpg" alt="" />
-            <p>Placeholder 3</p></a>
+              <img src="assets\images\image3.jpg" alt="" />
+              <p>Placeholder 2</p></a
+            >
+          </div>
+          <div>
+            <a href="" target="_blank">
+              <img src="assets\images\image4.jpg" alt="" />
+              <p>Placeholder 3</p></a
+            >
           </div>
         </div>
       </div>
     </section>
 
     <!-- resume section -->
-    <section id="resume">
+    <section id="resume" class="primary-section">
       <h2 class="primary-section-header">Resume</h2>
       <div>
         <a
@@ -111,16 +117,19 @@
           target="_blank"
           ><img
             src="assets\images\resume.jpg"
-            alt="screenshot of page 1 of Nathaniel Chan's Resume" />
+            alt="screenshot of page 1 of Nathaniel Chan's Resume"
+          />
           <img
             src="assets\images\resume2.jpg"
             alt="screenshot of page 2 of Nathaniel Chan's Resume"
-        /></a>
+          />
+          <div><h3>Click Here for Resume!</h3></div></a
+        >
       </div>
     </section>
 
     <!-- contact me section-->
-    <section id="contact-me">
+    <section id="contact-me" class="primary-section">
       <h2 class="primary-section-header">Contact Me</h2>
       <nav>
         <ul>
