Added an avatar to webpage
Added an avatar and updated CSS and HTML to allow avatar to be shown

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <!-- background image section -->
     <section>
       <div class="background">
+        <div class="avatar">
+          <img src="./assets/images/Boove" alt="Picture of Boove for Avatar" />
+        </div>
         <h2>Story of Me in One Page</h2>
       </div>
     </section>
