Added new project

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
             >
           </div>
           <div>
-            <a href="" target="_blank">
-              <img src="assets\images\image2.jpg" alt="" />
-              <p>Placeholder 1</p></a
+            <a href="https://floating-reef-77198.herokuapp.com/" target="_blank">
+              <img src="assets\images\bookaround logo" alt="Book Around Logo" />
+              <p>Book Around</p></a
             >
           </div>
         </div>
